lionpay-auth/build_log.txt
> Task :clean

> Task :compileJava FAILED
D:\workspace\likelion-cloud\project3\lionpay\lionpay-auth\src\main\java\com\likelion\lionpay_auth\controller\AdminController.java:32: error: cannot find symbol
        return ResponseEntity.ok(ApiResponse.of("관리자 로그아웃 되었습니다"));
                                            ^
  symbol:   method of(String)
  location: class ApiResponse
D:\workspace\likelion-cloud\project3\lionpay\lionpay-auth\src\main\java\com\likelion\lionpay_auth\controller\AdminController.java:38: error: cannot find symbol
        return ResponseEntity.ok(ApiResponse.of(new AdminCreateResponse(adminId)));
                                            ^
  symbol:   method of(AdminCreateResponse)
  location: class ApiResponse
2 errors

[Incubating] Problems report is available at: file:///D:/workspace/likelion-cloud/project3/lionpay/lionpay-auth/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  D:\workspace\likelion-cloud\project3\lionpay\lionpay-auth\src\main\java\com\likelion\lionpay_auth\controller\AdminController.java:32: error: cannot find symbol
          return ResponseEntity.ok(ApiResponse.of("관리자 로그아웃 되었습니다"));
                                              ^
    symbol:   method of(String)
    location: class ApiResponse
  D:\workspace\likelion-cloud\project3\lionpay\lionpay-auth\src\main\java\com\likelion\lionpay_auth\controller\AdminController.java:38: error: cannot find symbol
          return ResponseEntity.ok(ApiResponse.of(new AdminCreateResponse(adminId)));
                                              ^
    symbol:   method of(AdminCreateResponse)
    location: class ApiResponse
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (powered by Develocity).

BUILD FAILED in 1s
2 actionable tasks: 2 executed
